<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">YYTeam</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_add_friend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>

    <string name="tab_yyassociation">YY社团2</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>

    <string name="login_phone_test">手机号验证测试</string>
    <string name="login_phone_hint">请输入11位手机号</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_verification_code">获取验证码</string>
    <string name="login_verification_button">验证手机号</string>
    <string name="count_down">%1$d秒后重试</string>
    <string name="login_add_friend">添加好友</string>
    <string name="login_send_message">发消息</string>
    <string name="login_add_team">申请加入</string>
    <string name="login_add_task">报名活动</string>

    <!--title_bar_home_popwindow-->
    <string name="groupchat">创建讨论组</string>
    <string name="addfriend">添加好友</string>
    <string name="addteam">创建社团</string>
    <string name="money">我的钱包</string>


    <!--title_bar_team_home_popwindow-->
    <string name="team_create">创建大学社团</string>
    <string name="send_team_task">发送任务安排</string>
    <string name="see_tem_task">查看任务通知</string>


    <!--friend request-->
    <string name="request_agree">通过</string>
    <string name="request_refuse">拒绝</string>
</resources>
